--- a/chatapp/templates/login.html
+++ b/chatapp/templates/login.html
@@ -23,7 +23,7 @@
                     <div class="card-body">
                         <h3 class="card-title text-center mb-4">Giriş Yap</h3>
                         
-                        <form id="loginForm">
+                        <form method="post" action="{% url 'login' %}">
                             {% csrf_token %}
                             <div class="mb-3">
                                 <label for="username" class="form-label">Kullanıcı Adı</label>
@@ -48,41 +48,6 @@
             </div>
         </div>
     </div>
-
-    <script>
-        document.getElementById('loginForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            
-            const formData = {
-                username: document.getElementById('username').value,
-                password: document.getElementById('password').value
-            };
-
-            try {
-                const response = await fetch('/api/auth/login/', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'X-CSRFToken': document.querySelector('[name=csrfmiddlewaretoken]').value
-                    },
-                    body: JSON.stringify(formData)
-                });
-
-                const data = await response.json();
-
-                if (response.ok) {
-                    // locale kayıt etme
-                    localStorage.setItem('access_token', data.access);
-                    localStorage.setItem('refresh_token', data.refresh);
-                    window.location.href = '/chat/';
-                } else {
-                    alert(data.message || 'Giriş başarısız');
-                }
-            } catch (error) {
-                alert('Bir hata oluştu:' + error);
-            }
-        });
-    </script>
 
     <!-- Bootstrap JS ve Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
